syntax = "proto3";

import "google/protobuf/timestamp.proto";

message Transaction {
    bytes id = 1;
    bytes block_id = 2;
    bytes from = 3;
    bytes to = 4;
    double amount = 5;
    google.protobuf.Timestamp timestamp = 6;
}
